# ReviewSentimentAnalysis_NLP_ML

./: README.md  app.py  pyproject.toml  requirements.txt
notebooks/: EDA.ipynb  ModelTraining.ipynb
src/: utils.py  w2v_estimator.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/configs/: configurations.py
src/pipelines/: predict_pipeline.py
templates/: home.html
